--- a/playbook.yml
+++ b/playbook.yml
@@ -4,8 +4,6 @@
   become: yes
 
   tasks:
-#    - name: Execute the command in remote shell; stdout goes to the specified file on the remote.
-#      shell: echo "HelloWorld" > log.txt
     - name: Installation de python
       shell: amazon-linux-extras install -y python :3.8
       register: result_install
@@ -21,12 +19,12 @@
         mode: 0777
         owner: ec2-user
 
-    - name: "Copier (faire un scp) le fichier local helloWorld.class sur le dossier remote /app"
+    - name: "Copier (faire un scp) le fichier local sur le dossier  /app"
       copy:
         src: projetPython
         dest: /app
         mode: 0644
-    - name: On execute le fichier helloWorld.class
+    - name: On execute le fichier app.py
       shell: cd /app && ProjetPython
       #On prend tout ce qui est du stdout et on le met dans la variable result
       register: result
