--- a/playbook.yml
+++ b/playbook.yml
@@ -36,16 +36,16 @@
         dest: /app
         mode: 0644
 
-    - name: On genere l'image docker, on l'appelle projetPython/pytest:1.0
-      shell: cd /app && docker build -t projetPython/pytest:1.0 .
+    - name: On genere l'image docker, on l'appelle projetpython/pytest:1.0
+      shell: cd /app && docker build -t projetpython/pytest:1.0 .
       #On prend tout ce qui est du stdout et on le met dans la variable result
       register: result
     - debug:
         var=result
 
 
-    - name: On execute le contenur de l'image docker rojetPython/pytest:1.0
-      shell: docker run -d -p 5000:5000 --rm --name conteneur_app projetPython/pytest:1.0
+    - name: On execute le contenur de l'image docker projetpython/pytest:1.0
+      shell: docker run -d -p 5000:5000 --rm --name conteneur_app projetpython/pytest:1.0
       #On prend tout ce qui est du stdout et on le met dans la variable result
       register: result
     - debug:
